# sec-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  pylint.yml
src/pen_tester_agent/: __init__.py  agent.py  cli.py  context.py  executor.py  prompts.py  ui.py
src/pen_tester_agent/providers/: __init__.py  base.py
src/pen_tester_agent/tools/: __init__.py  bash_tool.py  cve_search.py  done.py  http_request.py  read_file.py  write_file.py
src/pen_tester_agent/training/: cli.py  datasets.py  rewards.py  trainer.py
src/sec_agent/: __init__.py  agent.py  cli.py  context.py  executor.py  prompts.py
src/sec_agent/providers/: base.py  ollama.py
src/sec_agent/tools/: __init__.py  base.py  bash_tool.py  done.py  http_request.py  math_tool.py  read_file.py  write_file.py
src/sec_agent/training/: __init__.py  cli.py  config.py  datasets.py  rewards.py  trainer.py
tests/: conftest.py  test_agent.py  test_bash_tool.py  test_context.py  test_cve_search.py  test_done_tool.py  test_executor.py  test_http_request.py  test_math_tool.py  test_prompts.py  test_read_file.py  test_registry_integration.py  test_tool_base.py  test_write_file.py
tests/test_training/: test_config.py  test_datasets.py  test_rewards.py
