[project]
name = "sec-agent"
version = "0.1.0"
description = "A security assistant agent powered by local LLMs via Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
]

[project.scripts]
sec-agent = "sec_agent.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
]
