[project]
name = "sec-agent"
version = "0.1.0"
description = "A security assistant agent powered by local LLMs via Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "ollama>=0.6.1",
]

[project.scripts]
sec-agent = "sec_agent.cli:main"
sec-agent-train = "sec_agent.training.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
]
training = [
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
    "transformers>=4.51.0,<5.0",
]
