[project]
name = "pen-tester-agent"
version = "0.1.0"
description = "A penetration testing agent powered by local LLMs via Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Felipe Simoes" },
]
keywords = ["penetration-testing", "security", "agent", "ollama", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.27.0",
    "ollama>=0.6.1",
    "rich>=13.0",
    "simple-term-menu>=1.6",
]

[project.urls]
Homepage = "https://github.com/fdsimoes-git/pen-tester-agent"
Repository = "https://github.com/fdsimoes-git/pen-tester-agent"
Issues = "https://github.com/fdsimoes-git/pen-tester-agent/issues"

[project.scripts]
pen-tester-agent = "pen_tester_agent.cli:main"
pen-tester-agent-train = "pen_tester_agent.training.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
]
training = [
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
    "transformers>=4.51.0,<5.0",
]
